fix: createplaylist
 https://github.com/d1BG/OOP1-24621694/issues/8